vpc1.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Parameters": {
    "PublicAZ": {
      "Description": "PublicAZ",
      "Type": "AWS::EC2::AvailabilityZone::Name",
      "Default": "-"
    },
    
    "PrivateAZ": {
      "Description": "PrivateAZ",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    }
  },

  "Resources": {
    "myvpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "192.168.0.0/22"
      }
    },

    "Publicsubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "PublicAZ"
        },
        "VpcId": {
          "Ref": "myvpc"
        },
        "CidrBlock": "192.168.1.0/24"
      }
    },

    "Privatesubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "PrivateAZ"
        },
        "VpcId": {
          "Ref": "myvpc"
        },
        "CidrBlock": "192.168.2.0/24"
      }
    },

    "Publicroutetable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc"
        }
      }
    },

    "Privateroutetable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc"
        }
      }
    },

    "PublicrouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "Publicsubnet"
        },
        "RouteTableId": {
          "Ref": "Publicroutetable"
        }
      }
    },

    "PrivaterouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "Privatesubnet"
        },
        "RouteTableId": {
          "Ref": "Privateroutetable"
        }
      }
    },

    "myNAT": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "myEIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "Publicsubnet"
        }
      }
    },

    "myEIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "myvpc"
      }
    },

    "RouteNATGateway": {
      "DependsOn": [
        "myNAT"
      ],

      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Privateroutetable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "myNAT"
        }
      }
    },

    "myIGW": {
      "Type": "AWS::EC2::InternetGateway"
    },

    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc"
        },
        "InternetGatewayId": {
          "Ref": "myIGW"
        }
      }
    },

    "PublicrouteName": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Publicroutetable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "myIGW"
        }
      }
    }

  },
  
  "Outputs": {
    "VpcId": {
      "Value": {
        "Ref": "myvpc"
      }
    }
  }
}
